--- a/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-validationAndSimulation.tex
+++ b/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-validationAndSimulation.tex
@@ -2,9 +2,9 @@
 \label{sec:component_diagrams-validation}
 
 \subsection{Static Validation of diagram}
-The static model validation checks that the model is well formed. The validation can be invoked at any time by clicking the V icon in the toolbar menu (see Figure 5). The validation is also invoked as a preliminary check when the generator is invoked. The validation rules fall into two categories; omissions that result in a meaningless model (reported as errors) and contraventions of the conventions of the components modelling notation that nevertheless can be translated to a meaningful Event-B model (reported as warnings). If the validation results in errors the generation does not proceed. If the validation raises warnings but no errors the generation proceeds. Note that model validation does not attempt to verify consistency properties of the model that will be checked by the Event-B static checker. The following validation rules are applied:
+The static model validation checks that the model is well formed. The validation can be invoked at any time by clicking the V icon in the toolbar menu (see Figure \ref{fig:TheComponentDiagramEditor}). The validation is also invoked as a preliminary check when the generator is invoked. The validation rules fall into two categories; omissions that result in a meaningless model (reported as errors) and contraventions of the conventions of the components modelling notation that nevertheless can be translated to a meaningful Event-B model (reported as warnings). If the validation results in errors the generation does not proceed. If the validation raises warnings but no errors the generation proceeds. Note that model validation does not attempt to verify consistency properties of the model that will be checked by the Event-B static checker. The following validation rules are applied:
 
-5.1.1	Errors
+\textbf{Errors}
 
 \begin{itemize}
 \item The label of any labelled element (e.g. operations adopt a label from the events that they elaborate) shall not be null.
@@ -19,7 +19,7 @@ The static model validation checks that the model is well formed. The validation
 \end{itemize}
 
 
-5.1.2	Warnings
+\textbf{Warnings}
 
 \begin{itemize}
 \item An operation shall only send data to a connector that is an outgoing connector for the component that contains the operation
@@ -30,17 +30,34 @@ The static model validation checks that the model is well formed. The validation
 
 
 \subsection{Model checking using ProB}
-The ProB model checker can be used to verify the generated Event-B model. ProB is initiated by right clicking on a machine and then selecting Start Animation / Model Checking. The layout of the Rodin interface (perspective) should change to one similar to that shown in 
+The ProB model checker can be used to verify the generated Event-B model. ProB is initiated by right clicking on a machine and then selecting Start Animation / Model Checking. The layout of the Rodin interface (perspective) should change to one similar to that shown in Figure \ref{fig:ProBModelCheckerInterface}.
  
-
-Figure 8 - ProB Model Checker Interface
+\begin{figure}[!htbp]
+  \centering
+  \ifplastex
+  \includegraphics[width=1024]{figures/image8.png}
+  \else
+  \includegraphics[width=1\textwidth]{figures/image8.png}
+  \fi
+  \caption{ProB Model Checker Interface}
+  \label{fig:ProBModelCheckerInterface}
+\end{figure}
 
 
 The model can be animated by manually selecting enabled events from the view in the top left and observing the changes to the state in the centre view. However, it is recommended that the Oracle simulator is used for animation because it provides a higher-level interface oriented on the component model.
-Model checking is invoked using the drop down menu from the checks toolbar item in the top-left Events view. The model checking options will then be displayed in a new window. Typical settings of these options are shown in Figure 9.
+Model checking is invoked using the drop down menu from the checks toolbar item in the top-left Events view. The model checking options will then be displayed in a new window. Typical settings of these options are shown in Figure \ref{fig:ProBModelCheckerOptions}.
 
  
-Figure 9 - ProB Model Checker Options
+ \begin{figure}[!htbp]
+  \centering
+  \ifplastex
+  \includegraphics[width=512]{figures/image9.png}
+  \else
+  \includegraphics[width=0.5\textwidth]{figures/image9.png}
+  \fi
+  \caption{ProB Model Checker Options}
+  \label{fig:ProBModelCheckerOptions}
+\end{figure}
 
 
 The generated model contains an infinite state space (due to the indefinite incrementing of time) and therefore the model checker will not complete its search of the state space. The model checker should be stopped manually after a short period and the coverage statistics can be examined to see the extent of coverage of the model. Since model checking does not complete it does not ensure that the model is consistent or deadlock free. However, the model checker often finds problems quickly and is therefore useful when trying to find problems in a model.
@@ -50,23 +67,51 @@ More details about running the ProB model checker are given here\footnote{\url{h
 \subsection{State-machine Animation}
 
 
-State-machines may be animated by clicking the running man icon in the toolbar menu (see Figure 5). The currently active state (if any) is shown with a bold outline. Any enabled transitions (i.e. transitions that are linked to at least one event that is enabled) are shown in green and the event may be selected for execution by clicking on the transition and selecting from the pop-up list. The state-machine animation is a view to the Pro-B model checker and during animation, all of the Pro-B interface is also available. Usually the state-machine will only represent part of the model and it will be necessary to fire some events from the ProB Events view when no transitions are enabled. State-machine animation provides a clearer view of the behaviour of the state-machine part of the model so that its interaction with other variables and events of the model can be validated. State-machine animation is not essential but may be a useful optional validation step.
+State-machines may be animated by clicking the running man icon in the toolbar menu (see Figure \ref{fig:TheComponentDiagramEditor}). The currently active state (if any) is shown with a bold outline (Figure \ref{fig:StatemachineAnimationInterface}). Any enabled transitions (i.e. transitions that are linked to at least one event that is enabled) are shown in green and the event may be selected for execution by clicking on the transition and selecting from the pop-up list. The state-machine animation is a view to the Pro-B model checker and during animation, all of the Pro-B interface is also available. Usually the state-machine will only represent part of the model and it will be necessary to fire some events from the ProB Events view when no transitions are enabled. State-machine animation provides a clearer view of the behaviour of the state-machine part of the model so that its interaction with other variables and events of the model can be validated. State-machine animation is not essential but may be a useful optional validation step.
  
+ \begin{figure}[!htbp]
+  \centering
+  \ifplastex
+  \includegraphics[width=1024]{figures/image10.png}
+  \else
+  \includegraphics[width=1.0\textwidth]{figures/image10.png}
+  \fi
+  \caption{State-machine Animation Interface}
+  \label{fig:StatemachineAnimationInterface}
+\end{figure}
 
-Figure 10 - State-machine Animation Interface
-The animation can be terminated by clicking the stood man icon in the toolbar menu (see Figure 5).
+The animation can be terminated by clicking the stood man icon in the toolbar menu (see Figure \ref{fig:TheComponentDiagramEditor}).
 
 
 \subsection{Simulation of Component model}
-The CODA simulator is based on ProB but provides an interface that is aware of the CODA components model. The interface consists of an additional view that is presented as part of the ProB perspective (the lower view in Figure 11). The simulator is started by right clicking on a machine and selecting Simulation-Start. 
+The CODA simulator is based on ProB but provides an interface that is aware of the CODA components model. The interface consists of an additional view that is presented as part of the ProB perspective (the lower view in Figure \ref{fig:CODASimulatorUserInterface}). The simulator is started by right clicking on a machine and selecting \textbf{Simulation-Start}. 
  
-
-Figure 11 - CODA Simulator User Interface
+ \begin{figure}[!htbp]
+  \centering
+  \ifplastex
+  \includegraphics[width=1024]{figures/image11.png}
+  \else
+  \includegraphics[width=1\textwidth]{figures/image11.png}
+  \fi
+  \caption{CODA Simulator User Interface}
+  \label{fig:CODASimulatorUserInterface}
+\end{figure}
 
 
 5.4.1	Modes
 
-During simulation there are two modes. Recording, where a new gold run is being recorded or playback where a previous gold run is being replayed for comparison. During recording the user controls which operations execute whereas during playback the system controls which operations execute. 
+During simulation there are two modes. Recording, where a new gold run is being recorded or playback where a previous gold run is being replayed for comparison. During recording the user controls which operations execute whereas during playback the system controls which operations execute.  The simulation modes and effect of control buttons is shown in Figure \ref{fig:ModelOfCODASimulatorOperation}.
+
+ \begin{figure}[!htbp]
+  \centering
+  \ifplastex
+  \includegraphics[width=1024]{figures/image12.png}
+  \else
+  \includegraphics[width=1\textwidth]{figures/image12.png}
+  \fi
+  \caption{Model of CODA Simulator Operation}
+  \label{fig:ModelOfCODASimulatorOperation}
+\end{figure} 
 
 5.4.2	Recording Mode
 
@@ -80,25 +125,23 @@ At any point the playback run can be saved by pressing the Save button or discar
 
 5.4.4	Summary of Control Buttons
 \begin{itemize}
-\item 
 \item Save - [recording | playback] Saves the current trace model and continues in the same mode. (The trace model is a gold run when in recording mode and a normal run in playback mode.
 \item Stop - [playback] Leaves playback and continues in recording mode. (The trace from playback is continued so that it can be extended to make a new gold run). When in recording mode, does nothing.
 \item Restart - [recording | playback] Discards the current trace and re-starts animation in the same mode as before. (In playback mode, the same gold run is replayed).
 \item Replay - [recording] Leaves recording mode and enters playback mode. The current trace is discarded and reset. A gold run for playback is chosen and loaded via a user dialog.
 \end{itemize}
 
- 
-Figure 12 - Model of CODA Simulator Operation
-
 5.4.5	Saved Trace runs
 
 The gold and playback runs are saved into a folder, called Oracle in the project that is being simulated. The file names for the runs are auto generated using the following scheme.
 
 Gold runs:
-<Machine name>.test.<timestamp>.gold.oracle 
+
+\texttt{<Machine name>.test.<timestamp>.gold.oracle}
 
 Playback runs:
-<Machine name>.test.<timestamp>.oracle 
+
+\texttt{<Machine name>.test.<timestamp>.oracle}
 
 
 %%% Local Variables:
