Adding images to tex (not complete)

--- a/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-buildingModels.tex
+++ b/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-buildingModels.tex
@@ -25,7 +25,7 @@ The component can now be opened for editing with the Component Diagram editor (F
   \else
   \includegraphics[width=1.0\textwidth]{figures/image5.png}
   \fi
-  \caption{The Component Diagram Editor}
+  \caption{The Component Diagram Editor !!!TBD!!! THIS DIAGRAM SHOULD HAVE ANNOTATIONS - SEE WORD VERSION}
   \label{fig:TheComponentDiagramEditor}
 \end{figure}
 
