--- a/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-enhancements.tex
+++ b/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-enhancements.tex
@@ -1,5 +1,10 @@
-\section{Concepts}
-\label{sec:component_diagrams-concepts}
+\section{Enhancements}
+\label{sec:component_diagrams-enhancements}
+
+THIS SECTION HAS NOT BEEN CONVERTED FROM WORD YET
+
+(use images 56 to 58)
+
 
 %%% Local Variables:
 %%% mode: latex
