--- a/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-user_manual.tex
+++ b/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-user_manual.tex
@@ -54,6 +54,8 @@
 
 \input{component_diagrams-ioLevelRefinement}
 
+\input{component_diagrams-enhancements}
+
 \input{component_diagrams-refactoring}
 
 \input{component_diagrams-translationToEventB}
