--- a/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-tutorial.tex
+++ b/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-tutorial.tex
@@ -8,14 +8,61 @@ This section illustrates the use of the CODA modelling tool and a proposed metho
  \input{component_diagrams-tutorial_secondRefinement}
  \input{component_diagrams-tutorial_thirdRefinement}
  \input{component_diagrams-tutorial_fourthRefinement}
- \subsection{Further Refinements}
- The refinement strategy that has been established in the earlier refinements can continue as the agitator motor and heater components are introduced. At each stage the abstract washing machine sub-system component is constrained until it finally represents just the
+ 
+\subsection{Further Refinements}
+ 
+The refinement strategy that has been established in the earlier refinements can continue as the agitator motor and heater components are introduced. At each stage the abstract washing machine sub-system component is constrained until it finally represents just the
   hardware/software controller
    that is being developed for the washing machine.
- \subsection{Running the Oracle Simulator}
- The CODA simulator can be used at every refinement step to establish a set of regression tests and golden results. Figure 48 illustrates the state of the system at times 10, 14, 15 and 18.Figure 48 - Snapshots of CODA Simulator at Times 10, 14, 15 and 18
- \subsection{Conclusion}
- A method for system modelling and refinement has been illustrated using the washing machine case study example. Modelling begins with an abstract state machine model of the system, which is systematically refined into a set of communicating processes - the hardware/software controller under development and the components that represent the controller environment.At each refinement step, formal proof and model checking is used to validate the model against the requirements and to show absence of deadlock.The final hardware/software controller component can then be verified within a component-based environment using the CODA Oracle Simulator.
+ 
+\subsection{Running the Oracle Simulator}
+ 
+The CODA simulator can be used at every refinement step to establish a set of regression tests and golden results. Figure \ref{fig:SnapshotsOfCODASimulator} illustrates the state of the system at times 10, 14, 15 and 18.
+
+ \begin{figure}[!htbp]
+  \centering
+  
+  \subfloat{
+  \ifplastex
+  \includegraphics[width=1024]{figures/image49.png}
+  \else
+  \includegraphics[width=1\textwidth]{figures/image49.png}
+  \fi
+  }
+  
+    \subfloat{
+  \ifplastex
+  \includegraphics[width=1024]{figures/image50.png}
+  \else
+  \includegraphics[width=1\textwidth]{figures/image49.png}
+  \fi
+  }
+  
+    \subfloat{
+  \ifplastex
+  \includegraphics[width=1024]{figures/image51.png}
+  \else
+  \includegraphics[width=1\textwidth]{figures/image49.png}
+  \fi
+  }
+  
+    \subfloat{
+  \ifplastex
+  \includegraphics[width=1024]{figures/image52.png}
+  \else
+  \includegraphics[width=1\textwidth]{figures/image49.png}
+  \fi
+  }
+  
+  \caption{Snapshots of CODA Simulator at Times 10, 14, 15 and 18}
+  \label{fig:SnapshotsOfCODASimulator}
+\end{figure} 
+ 
+\subsection{Conclusion}
+ 
+A method for system modelling and refinement has been illustrated using the washing machine case study example. Modelling begins with an abstract state machine model of the system, which is systematically refined into a set of communicating processes - the hardware/software controller under development and the components that represent the controller environment.
+At each refinement step, formal proof and model checking is used to validate the model against the requirements and to show absence of deadlock.
+The final hardware/software controller component can then be verified within a component-based environment using the CODA Oracle Simulator.
 
 %%% Local Variables:
 %%% mode: latex
