fix latex problem in second refinement

--- a/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-tutorial_secondRefinement.tex
+++ b/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-tutorial_secondRefinement.tex
@@ -49,7 +49,7 @@ The washing machine sub-system sends a message via the lock connector to the doo
  \begin{figure}[!htbp]
   \centering
   
-   \subfloat{
+   \subfloat[initiate self-wake]{
       \ifplastex
       \includegraphics[width=1024]{figures/image28.png}
       \else
@@ -57,7 +57,7 @@ The washing machine sub-system sends a message via the lock connector to the doo
       \fi
   }
       
-  \subfloat{
+  \subfloat[respond to self-wake]{
      \ifplastex
      \includegraphics[width=1024]{figures/image29.png}
      \else
