--- a/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-user_manual.tex
+++ b/ac.soton.coda.doc/latex/component_diagrams/component_diagrams-user_manual.tex
@@ -17,6 +17,12 @@
 \usepackage{coda}
 
  \usepackage{multirow}
+ 
+ % Package for including figures
+\usepackage{graphicx}
+
+% Package for sub-floats (e.g. figures)
+\usepackage{subfig}
 
 % % Title
 \title{CODA Component Diagrams User Manual} 
